python/lapack_like/factor.py

#
#  Copyright (c) 2009-2016, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from ..core import *
from perm import *
import ctypes

# Cholesky factorization
# ======================
lib.ElCholesky_s.argtypes = \
lib.ElCholesky_d.argtypes = \
lib.ElCholesky_c.argtypes = \
lib.ElCholesky_z.argtypes = \
lib.ElCholeskyDist_s.argtypes = \
lib.ElCholeskyDist_d.argtypes = \
lib.ElCholeskyDist_c.argtypes = \
lib.ElCholeskyDist_z.argtypes = \
  [c_uint,c_void_p]

lib.ElCholeskyPiv_s.argtypes = \
lib.ElCholeskyPiv_d.argtypes = \
lib.ElCholeskyPiv_c.argtypes = \
lib.ElCholeskyPiv_z.argtypes = \
lib.ElCholeskyPivDist_s.argtypes = \
lib.ElCholeskyPivDist_d.argtypes = \
lib.ElCholeskyPivDist_c.argtypes = \
lib.ElCholeskyPivDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p]

def Cholesky(uplo,A,piv=False):
  if type(A) is Matrix:
    if piv:
      p = Permutation()
      args = [uplo,A.obj,p.obj]
      if   A.tag == sTag: lib.ElCholeskyPiv_s(*args)
      elif A.tag == dTag: lib.ElCholeskyPiv_d(*args)
      elif A.tag == cTag: lib.ElCholeskyPiv_c(*args)
      elif A.tag == zTag: lib.ElCholeskyPiv_z(*args)
      else: DataExcept()
      return p
    else:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElCholesky_s(*args)
      elif A.tag == dTag: lib.ElCholesky_d(*args)
      elif A.tag == cTag: lib.ElCholesky_c(*args)
      elif A.tag == zTag: lib.ElCholesky_z(*args)
      else: DataExcept()
  elif type(A) is DistMatrix:
    if piv:
      p = DistPermutation(A.Grid())
      args = [uplo,A.obj,p.obj]
      if   A.tag == sTag: lib.ElCholeskyPivDist_s(*args)
      elif A.tag == dTag: lib.ElCholeskyPivDist_d(*args)
      elif A.tag == cTag: lib.ElCholeskyPivDist_c(*args)
      elif A.tag == zTag: lib.ElCholeskyPivDist_z(*args)
      else: DataExcept()
      return p
    else:
      args = [uplo,A.obj]
      if   A.tag == sTag: lib.ElCholeskyDist_s(*args)
      elif A.tag == dTag: lib.ElCholeskyDist_d(*args)
      elif A.tag == cTag: lib.ElCholeskyDist_c(*args)
      elif A.tag == zTag: lib.ElCholeskyDist_z(*args)
      else: DataExcept()
  else: TypeExcept()

lib.ElCholeskyMod_s.argtypes = \
lib.ElCholeskyMod_c.argtypes = \
lib.ElCholeskyModDist_s.argtypes = \
lib.ElCholeskyModDist_c.argtypes = \
  [c_uint,c_void_p,sType,c_void_p]

lib.ElCholeskyMod_d.argtypes = \
lib.ElCholeskyMod_z.argtypes = \
lib.ElCholeskyModDist_d.argtypes = \
lib.ElCholeskyModDist_z.argtypes = \
  [c_uint,c_void_p,dType,c_void_p]

def CholeskyMod(uplo,T,alpha,V):
  if type(T) is not type(V):
    raise Exception('Types of T and V must match')
  if T.tag != V.tag:
    raise Exception('Datatypes of T and V must match')
  args = [uplo,T.obj,alpha,V.obj]
  if type(T) is Matrix:
    if   T.tag == sTag: lib.ElCholeskyMod_s(*args)
    elif T.tag == dTag: lib.ElCholeskyMod_d(*args)
    elif T.tag == cTag: lib.ElCholeskyMod_c(*args)
    elif T.tag == zTag: lib.ElCholeskyMod_z(*args)
    else: DataExcept()
  elif type(T) is DistMatrix:
    if   T.tag == sTag: lib.ElCholeskyModDist_s(*args)
    elif T.tag == dTag: lib.ElCholeskyModDist_d(*args)
    elif T.tag == cTag: lib.ElCholeskyModDist_c(*args)
    elif T.tag == zTag: lib.ElCholeskyModDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElHPSDCholesky_s.argtypes = \
lib.ElHPSDCholesky_d.argtypes = \
lib.ElHPSDCholesky_c.argtypes = \
lib.ElHPSDCholesky_z.argtypes = \
lib.ElHPSDCholeskyDist_s.argtypes = \
lib.ElHPSDCholeskyDist_d.argtypes = \
lib.ElHPSDCholeskyDist_c.argtypes = \
lib.ElHPSDCholeskyDist_z.argtypes = \
  [c_uint,c_void_p]

def HPSDCholesky(uplo,A):
  args = [uplo,A.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHPSDCholesky_s(*args)
    elif A.tag == dTag: lib.ElHPSDCholesky_d(*args)
    elif A.tag == cTag: lib.ElHPSDCholesky_c(*args)
    elif A.tag == zTag: lib.ElHPSDCholesky_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHPSDCholeskyDist_s(*args)
    elif A.tag == dTag: lib.ElHPSDCholeskyDist_d(*args)
    elif A.tag == cTag: lib.ElHPSDCholeskyDist_c(*args)
    elif A.tag == zTag: lib.ElHPSDCholeskyDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElSolveAfterCholesky_s.argtypes = \
lib.ElSolveAfterCholesky_d.argtypes = \
lib.ElSolveAfterCholesky_c.argtypes = \
lib.ElSolveAfterCholesky_z.argtypes = \
lib.ElSolveAfterCholeskyDist_s.argtypes = \
lib.ElSolveAfterCholeskyDist_d.argtypes = \
lib.ElSolveAfterCholeskyDist_c.argtypes = \
lib.ElSolveAfterCholeskyDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p]

lib.ElSolveAfterCholeskyPiv_s.argtypes = \
lib.ElSolveAfterCholeskyPiv_d.argtypes = \
lib.ElSolveAfterCholeskyPiv_c.argtypes = \
lib.ElSolveAfterCholeskyPiv_z.argtypes = \
lib.ElSolveAfterCholeskyPivDist_s.argtypes = \
lib.ElSolveAfterCholeskyPivDist_d.argtypes = \
lib.ElSolveAfterCholeskyPivDist_c.argtypes = \
lib.ElSolveAfterCholeskyPivDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p]

def SolveAfterCholesky(uplo,orient,A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [uplo,orient,A.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterCholesky_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterCholesky_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterCholesky_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterCholesky_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterCholeskyDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterCholeskyDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterCholeskyDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterCholeskyDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

def SolveAfterCholeskyPiv(uplo,orient,A,p,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [uplo,orient,A.obj,p.obj,B.obj]
  if type(A) is Matrix:
    if type(p) is not Permutation:
      raise Exception('p must be a Permutation')
    if   A.tag == sTag: lib.ElSolveAfterCholeskyPiv_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterCholeskyPiv_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterCholeskyPiv_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterCholeskyPiv_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(p) is not DistPermutation:
      raise Exception('p must be a DistPermutation')
    if   A.tag == sTag: lib.ElSolveAfterCholeskyPivDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterCholeskyPivDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterCholeskyPivDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterCholeskyPivDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# LDL
# ===

# Emulate an enum for LDL pivot types
(BUNCH_KAUFMAN_A,BUNCH_KAUFMAN_C,BUNCH_KAUFMAN_D,BUNCH_KAUFMAN_BOUNDED,
 BUNCH_PARLETT,LDL_WITHOUT_PIVOTING)=(0,1,2,3,4,5)

class LDLPivot(ctypes.Structure):
  _fields_ = [("nb",iType),("from",(iType*2))]

lib.ElLDLPivotConstant_s.argtypes = [c_uint,POINTER(sType)]
lib.ElLDLPivotConstant_d.argtypes = [c_uint,POINTER(dType)]
def LDLPivotConstant_s(pivotType):
  gamma = sType()
  lib.ElLDLPivotConstant_s(pivotType,pointer(gamma))
  return gamma
def LDLPivotConstant_d(pivotType):
  gamma = dType()
  lib.ElLDLPivotConstant_d(pivotType,pointer(gamma))
  return gamma

class LDLPivotCtrl_s(ctypes.Structure):
  _fields_ = [("pivotType",c_uint),("gamma",sType)]
  def __init__(self,pivType=BUNCH_KAUFMAN_A):
    pivotType = pivType
    gamma = LDLPivotConstant_s(pivType)
class LDLPivotCtrl_d(ctypes.Structure):
  _fields_ = [("pivotType",c_uint),("gamma",dType)]
  def __init__(self,pivType=BUNCH_KAUFMAN_A):
    pivotType = pivType
    gamma = LDLPivotConstant_d(pivType)

def TagToPivotCtrl(tag,pivType=BUNCH_KAUFMAN_A):
  if   tag == sTag: return LDLPivotCtrl_s(pivType)
  elif tag == dTag: return LDLPivotCtrl_d(pivType)
  elif tag == cTag: return LDLPivotCtrl_s(pivType)
  elif tag == zTag: return LDLPivotCtrl_d(pivType)
  else: DataExcept()

lib.ElLDL_s.argtypes = \
lib.ElLDL_d.argtypes = \
lib.ElLDLDist_s.argtypes = \
lib.ElLDLDist_d.argtypes = \
  [c_void_p]

lib.ElLDL_c.argtypes = \
lib.ElLDL_z.argtypes = \
lib.ElLDLDist_c.argtypes = \
lib.ElLDLDist_z.argtypes = \
  [c_void_p,bType]

lib.ElLDLPiv_s.argtypes = \
lib.ElLDLPivDist_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,LDLPivotCtrl_s]

lib.ElLDLPiv_d.argtypes = \
lib.ElLDLPivDist_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,LDLPivotCtrl_d]

lib.ElLDLPiv_c.argtypes = \
lib.ElLDLPivDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,bType,LDLPivotCtrl_s]

lib.ElLDLPiv_z.argtypes = \
lib.ElLDLPivDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,bType,LDLPivotCtrl_d]

def LDL(A,conjugate=True,pivType=BUNCH_KAUFMAN_A):
  if type(A) is Matrix:
    if pivType == LDL_WITHOUT_PIVOTING:
      args = [A.obj]
      argsCpx = [A.obj,conjugate]
      if   A.tag == sTag: lib.ElLDL_s(*args)
      elif A.tag == dTag: lib.ElLDL_d(*args)
      elif A.tag == cTag: lib.ElLDL_c(*argsCpx)
      elif A.tag == zTag: lib.ElLDL_z(*argsCpx)
      else: DataExcept()
    else:
      dSub = Matrix(A.tag)
      p = Permutation()
      ctrl = TagToPivotCtrl(A.tag,pivType)
      args = [A.obj,dSub.obj,p.obj,ctrl]
      argsCpx = [A.obj,dSub.obj,p.obj,conjugate,ctrl]
      if   A.tag == sTag: lib.ElLDLPiv_s(*args)
      elif A.tag == dTag: lib.ElLDLPiv_d(*args)
      elif A.tag == cTag: lib.ElLDLPiv_c(*argsCpx)
      elif A.tag == zTag: lib.ElLDLPiv_z(*argsCpx)
      else: DataExcept()
      return dSub, p
  elif type(A) is DistMatrix:
    if pivType == LDL_WITHOUT_PIVOTING:
      args = [A.obj]
      argsCpx = [A.obj,conjugate]
      if   A.tag == sTag: lib.ElLDLDist_s(*args)
      elif A.tag == dTag: lib.ElLDLDist_d(*args)
      elif A.tag == cTag: lib.ElLDLDist_c(*argsCpx)
      elif A.tag == zTag: lib.ElLDLDist_z(*argsCpx)
      else: DataExcept()
    else:
      dSub = DistMatrix(A.tag,VC,STAR,A.Grid())
      p = DistPermutation(A.Grid())
      ctrl = TagToPivotCtrl(A.tag,pivType)
      args = [A.obj,dSub.obj,p.obj,ctrl]
      argsCpx = [A.obj,dSub.obj,p.obj,conjugate,ctrl]
      if   A.tag == sTag: lib.ElLDLPivDist_s(*args)
      elif A.tag == dTag: lib.ElLDLPivDist_d(*args)
      elif A.tag == cTag: lib.ElLDLPivDist_c(*argsCpx)
      elif A.tag == zTag: lib.ElLDLPivDist_z(*argsCpx)
      else: DataExcept()
      return dSub, p
  else: TypeExcept()

lib.ElInertiaAfterLDL_s.argtypes = \
lib.ElInertiaAfterLDL_d.argtypes = \
lib.ElInertiaAfterLDL_c.argtypes = \
lib.ElInertiaAfterLDL_z.argtypes = \
lib.ElInertiaAfterLDLDist_s.argtypes = \
lib.ElInertiaAfterLDLDist_d.argtypes = \
lib.ElInertiaAfterLDLDist_c.argtypes = \
lib.ElInertiaAfterLDLDist_z.argtypes = \
  [c_void_p,c_void_p,POINTER(InertiaType)]

def InertiaAfterLDL(d,dSub):
  inertia = InertiaType()
  if type(d) is not type(dSub):
    raise Exception('Types of d and dSub must match')
  if d.tag != Base(dSub.tag):
    raise Exception('Datatype of d must be the base of that of dSub')
  args = [d.obj,dSub.obj,pointer(inertia)]
  if type(d) is Matrix:
    if   dSub.tag == sTag: lib.ElInertiaAfterLDL_s(*args)
    elif dSub.tag == dTag: lib.ElInertiaAfterLDL_d(*args)
    elif dSub.tag == cTag: lib.ElInertiaAfterLDL_c(*args)
    elif dSub.tag == zTag: lib.ElInertiaAfterLDL_z(*args)
    else: DataExcept()
  elif type(d) is DistMatrix:
    if   dSub.tag == sTag: lib.ElInertiaAfterLDLDist_s(*args)
    elif dSub.tag == dTag: lib.ElInertiaAfterLDLDist_d(*args)
    elif dSub.tag == cTag: lib.ElInertiaAfterLDLDist_c(*args)
    elif dSub.tag == zTag: lib.ElInertiaAfterLDLDist_z(*args)
    else: DataExcept()
  else: TypeExcept()
  return inertia
